syntax = "proto3";

option go_package = "Executor/service;executor";

import "google/protobuf/wrappers.proto";

message requestBatch {
    int64 requestId = 1;
    repeated string keys = 2;
    repeated string values = 3;
}

message respondBatch {
    int64 requestId = 1;
    repeated string keys =2;
    repeated string values =3;
}

service Executor{
    rpc executeBatch(requestBatch) returns (respondBatch);
    rpc initDb(requestBatch) returns (google.protobuf.BoolValue);
}
